[gd_scene load_steps=3 format=3 uid="uid://dpkvt4gjnvxus"]

[ext_resource type="Script" path="res://Menu.gd" id="1_607wm"]
[ext_resource type="PackedScene" uid="uid://5staieg7sydb" path="res://player.tscn" id="2_gj01m"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 38.0
offset_right = 24.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.64853, 5.39722)
script = ExtResource("1_607wm")
player_scene = ExtResource("2_gj01m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -248.0
offset_right = 285.5
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.681317)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Single Player"

[node name="HostGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Host Online Game"

[node name="JoinGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Join Online Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HostGame" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinGame" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
